--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,17 @@ a:hover { color: #036; }
 
 body {
   background-color: #eee;
+  padding: 0px;
+border: 1px solid #000;
+
+}
+
+html, body {
+    height: 100%;
+}
+
+#test {
+
 
 }
 
@@ -235,14 +246,18 @@ h2 {
 #karte {
 	width: 100%;
 	z-index: 1;
-  /*display: none;*/
 }
 
 #kinects {
 	position: absolute;
+    top: 0px;
+    left: 0px;	
 }
 #regions {
 	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1000000;
 }
 
 
@@ -353,15 +368,15 @@ ul {
 }
 
 .box {
-	border: 1px solid #817335;
+	border: 1px solid rgb(113, 99, 37);
 	width: 100px;
 	height: 100px;
 	position: absolute;
 	top: 100px;
 	z-index: 10;
-        background: rgba(113, 99, 37, .20);
+    background-color: rgba(113, 99, 37, .20);
 	padding: 10px;
-	border-radius: 10px;
+	/*border-radius: 10px;*/
 
 }
 
@@ -436,6 +451,16 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 	margin-top: 12px;
 }
 
+.lcRegionColor {
+    float: left;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    border: 1px solid #000;
+    font-size: 2px;
+    margin-top: 12px;
+}
+
 .regionActions {
 	margin-top: 15px;
 	border-bottom: 1px solid #ccc;			
@@ -455,4 +480,13 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 
 .showKinects {
 	display:none;
+}
+
+#canvas {
+}
+
+#canvascont {
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
