--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ a:hover { color: #036; }
 body {
   background-color: #eee;
   padding: 0px;
-border: 1px solid #000;
+  
 
 }
 
@@ -257,7 +257,7 @@ h2 {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	z-index: 1000000;
+	z-index: 21;
 }
 
 
@@ -368,7 +368,7 @@ ul {
 }
 
 .box {
-	border: 1px solid rgb(113, 99, 37);
+	border: 2px solid rgb(113, 99, 37);
 	width: 100px;
 	height: 100px;
 	position: absolute;
@@ -381,7 +381,7 @@ ul {
 }
 
 .box:hover {
-	border: 1px solid #000;
+	border: 2px solid #000;
 }
 
 div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-accordion-content-active {
@@ -483,10 +483,40 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 }
 
 #canvas {
+
 }
 
 #canvascont {
     position: absolute;
     top: 0px;
     left: 0px;
+    z-index: 8;
+    
+}
+
+#notification {
+    width: 270px;
+
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    margin-left: -150px;
+    background-color: #f5f56e;
+    box-shadow: 3px 2px 7px #aaa;
+    padding: 10px;
+    display:none;
+    z-index: 7;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    opacity: 0.9;
+}
+
+.inputpolynavpoint {
+    width: 30px;
+}
+
+.polyiconcanvas {
+    /*border: 1px solid #000;*/
+    margin-top: 10px;
+    margin-left: 10px;
 }
