--- a/css/style.css
+++ b/css/style.css
@@ -303,13 +303,23 @@ h2 {
 	top: -50px;
 	width: 300px;
 	z-index: 100;
-	height: 40px;
+	
 	background-color: #fff;
+
 	/*padding: 10px;*/
   	box-shadow: -3px 2px 5px #aaa;
  	/*display:none;*/
 
+
 	
+}
+
+.navigation_closed {
+  background-image: url(ui-dark/images/ui-bg_diagonals-thick_8_333333_40x40.png);
+  color: #fff;  
+  border-bottom-left-radius: 8px;
+  height: 35px;
+
 }
 
 #navigation:hover {
@@ -318,13 +328,29 @@ h2 {
 }
 
 #navigation h2 {
-  margin-bottom: 15px;
-  padding: 5px 10px 10px 10px; 
+
+  padding: 7px 10px 7px 10px; 
 }
 
 #navigationContent {
   
   display:none;
+}
+
+#navigationOptions {
+  position: absolute;
+  background-color: #fff;
+  border-top-left-radius:  8px;
+  border-bottom-left-radius:  8px;
+  right: 250px;
+  top: 0px;
+  padding: 5px 5px 4px 5px;
+  box-shadow: -3px 2px 5px #aaa;
+  display:none;
+  z-index: 0;
+  background-image: url(ui-dark/images/ui-bg_diagonals-thick_8_333333_40x40.png);
+  
+
 }
 
 #menu h1 {
@@ -420,16 +446,19 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 .ui-accordion .ui-helper-reset {
   
   font-size: 0.9em;
+  line-height: 1.32;
 }
 
 .ui-accordion-header {
   background-image: url(ui-dark/images/ui-bg_diagonals-thick_8_333333_40x40.png);
+  border: 0px solid #fff;
+  border-bottom: 1px solid #ccc;
   color: #fff;
 }
 
 
 .ui-accordion .ui-state-active a, .ui-accordion  .ui-state-active a:link, .ui-accordion  .ui-state-active a:visited {
-
+  
   color: #fff;
 }
 
@@ -996,3 +1025,45 @@ border-radius: 4px;
   display: block;
   color: #ccc;
 }
+
+
+.ui-accordion-header {
+    margin-top: 0px !important;
+}
+
+.ui-corner-all, .ui-corner-top  {
+    border-radius: 0px;
+    
+}
+
+#mapDevices {
+    
+}
+
+.mapDevice {
+    position:absolute;
+    z-index: 98;
+    /*border: 1px solid #DDD;
+    background-color: #fff;*/
+}
+
+.deviceImg {
+    width: 30px;
+    opacity: 0.4;
+    
+}
+
+
+.mapActionEntry {
+  position: absolute !important;
+  width: 64px;
+  height: 64px;
+  overflow: hidden; 
+  margin: 0px;
+  z-index: 10;
+  border: 1px solid #DDD;
+  background-color: #fff;
+  z-index: 99;
+}
+
+
