--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,7 @@ a:hover { color: #000; }
 .clearfix { zoom: 1; }
 
 
-@media all and (orientation:portrait) {
 
-}
-
-@media all and (orientation:landscape) {
-
-}
-
-@media screen and (max-device-width: 480px) {
-
-  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
-}
 
 
 @media print {
@@ -271,12 +260,12 @@ h2 {
 }
 
 #kinects {
-	position: absolute;
+	position: fixed;
     top: 0px;
     left: 0px;	
 }
 #regions {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	/*z-index: 21;*/
@@ -288,7 +277,7 @@ h2 {
 
 .kinect {
 
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	/*-webkit-transform: rotateZ(30deg);
@@ -421,7 +410,7 @@ ul {
 
 .box {
 	border: 2px solid rgb(113, 99, 37);
-	position: absolute;
+	position: fixed;
 	z-index: 10;
 	top: 0px;
 	left: 0px;
@@ -510,7 +499,7 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 .user {
 	width: 20px;
 	height: 20px;
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 0px;
 	background-color: #f00;
@@ -574,7 +563,7 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 #notification {
     width: 270px;
 
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 50%;
     margin-left: -150px;
@@ -962,7 +951,7 @@ border-radius: 4px;
 
 .uiOverlay {
   display:none;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -972,6 +961,7 @@ border-radius: 4px;
   background-color: #555;
   z-index: 65000;
   font-family: Helvetica;
+  overflow: auto;
 
 }
 
@@ -1067,7 +1057,7 @@ border-radius: 4px;
 
 
 .mapActionEntry {
-  position: absolute !important;
+  position: fixed !important;
   width: 64px;
   height: 64px;
   overflow: hidden; 
@@ -1144,3 +1134,79 @@ border-radius: 4px;
   margin-top: 10px;
   margin-left: 10px
 }
+
+
+.gestureDialog {
+
+  background-color: #fff;
+  z-index: 65200;
+  
+}
+
+.gestureDialogGesture {
+  float: left;
+  border: 1px solid #ddd;
+  padding: 1px 7px 0px 2px;
+  background-color: #fff;
+  color: #555;
+  text-decoration: none;
+  margin: 4px;
+  font-size: 11px;
+}
+
+.gestureDialogGesture:hover {
+  border: 1px solid #aaa;
+  cursor: pointer; 
+}
+
+.gestureDialogGestureImg  {
+  float: left;
+  width: 28px;
+
+}
+
+.gestureDialogGestureTitel {
+  margin-left: 28px;
+  line-height: 27px;
+  
+}
+
+.gestureDialogRow {
+  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  clear: both;
+}
+
+.gestureDialogRowTitel {
+  float: left;
+  width: 120px;
+  line-height: 38px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.gestureDialogRowSelectedValues, .gestureDialogRowAvailableValues, .gestureDialogRowButton {
+  margin-left: 120px;
+}
+
+.gestureDialogRowButton {
+  text-align: right;
+  
+}
+
+.gestureDialogRowButtonBtn {
+  border: 1px solid #ddd;
+  padding: 4px;
+  background-color: #fff;
+  color: #555;  
+  font-size: 12px !important;
+}
+
+
+.gestureCombiValues {
+  overflow: hidden;
+}
+
+
