Baall aktionen update
git-svn-id: https://nyx.informatik.uni-bremen.de/svn/SmartEnergy/groups/kinect/src/webapp/smartwebapp@801 ccd0ef04-3c04-447b-9bd2-a41a160fc93b

--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ div.ui-accordion-content.ui-helper-reset.ui-widget-content.ui-corner-bottom.ui-a
 	top: 0px;
 	background-color: #f00;
 	border-radius: 	10px;
+	z-index: 65400;	
 }
 
 .lcUserColor {
